--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -13,7 +13,7 @@ number-sections: true
 ---
 
 ```{r}
-#| include: false
+#| include: true
 #| warning: false
 #| message: false
 
@@ -28,27 +28,12 @@ number-sections: true
 
 
 #### Workspace setup ####
-library(httr)
 library(tidyverse)
-library(xml2)
-# [...UPDATE THIS...]
 
 #### Download data ####
 # [...ADD CODE HERE TO DOWNLOAD...]
 
-
-NASA_APOD_20230216 <-
-  GET("https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY&date=2023-02-16")
-
-content(NASA_APOD_20230216) $url %>%
-  download.file(destfile = "inputs/NASA_APOD_20230216.jpg")
-
-
-#### Save data ####
-# [...UPDATE THIS...]
-# change the_raw_data to whatever name you assigned when you downloaded it.
-
-         
+knitr::include_graphics(here::here("inputs/NASA_APOD_20230216.jpg"))
 ```
 
 
